# Lambda-SNARK-R

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  Makefile  PROJECT_SETUP.md  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  requirements.txt  vcpkg.json
.github/workflows/: audit.yml  ci.yml
artifacts/: .gitignore
artifacts/audit/: A-phase-report.md  B-phase-report.md
cpp-core/: CMakeLists.txt  README.md  vcpkg.json
cpp-core/cmake/: LambdaSNARKCoreConfig.cmake.in
cpp-core/include/lambda_snark/: commitment.h  ntt.h  r1cs.h  types.h  utils.h
cpp-core/src/: commitment.cpp  ffi.cpp  lean_ffi.cpp  lincheck.cpp  mulcheck.cpp  ntt.cpp  r1cs.cpp  utils.cpp
cpp-core/tests/: test_commitment.cpp  test_conformance.cpp  test_ntt.cpp  test_r1cs.cpp  test_utils.cpp
cpp-core/tools/: dudect_sampler.cpp
docs/: architecture.md  index.md  ntt-implementation.md
docs/audit/: README.md  checklist_cpp.md  checklist_formal.md  checklist_rust.md
docs/development/: M2.2.1-prover-api-design.md  M3.1-zk-design.md  M4.1-r1cs-design.md  M4.3-forking-equations.md  M8-M9-formal-verification-roadmap.md  axiom-elimination-plan.md  lwe-verification-ffi.md  session-2025-11-06-final.md  session-2025-11-07-M2.2.md  session-2025-11-07-M2.3.md  session-2025-11-07-M3-complete.md  session-2025-11-07-M3.2-blinding.md  session-2025-11-07-M3.3-M3.4-blinded.md
docs/images/: milestone-dependencies.mmd  module-dependencies.mmd  performance-characteristics.mmd  security-boundaries.mmd  system-components.mmd
docs/spec/: specification.md  specification.sdoc
formal/: LambdaSNARK.lean  Main.lean  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  README.md  ROADMAP_EXECUTIVE_SUMMARY.md  ROADMAP_TO_100.md  S3_EXTRACTION_COMPLETE.md  S3_PROOF_PROGRESS.md  SESSION_SUMMARY_2025-11-16.md  Tmp.lean  VERIFICATION_PLAN.md  VERIFICATION_ROADMAP_TO_100.md  lake-manifest.json  lakefile.lean
formal/LambdaSNARK/: Completeness.lean  Core.lean  ForkingEquations.lean  ForkingInfrastructure.lean  Polynomial.lean  Soundness.lean
formal/LambdaSNARK/Forking/: HeavyLight.lean  Probability.lean
formal/tests/: ForkProbabilityBounds.lean  ForkingCertificateExample.lean  HealthcareCircuit.lean  HealthcareForkingEquations.lean  HealthcareQuotient.lean  HealthcareWitnessData.lean
rust-api/: Cargo.toml
rust-api/lambda-snark/: Cargo.toml
rust-api/lambda-snark-cli/: Cargo.toml  EXAMPLES.md
rust-api/lambda-snark-cli/src/: main.rs
rust-api/lambda-snark-core/: Cargo.toml
rust-api/lambda-snark-core/src/: lib.rs  r1cs.rs
rust-api/lambda-snark-sys/: Cargo.toml  build.rs
rust-api/lambda-snark-sys/src/: lib.rs
rust-api/lambda-snark/benches/: lagrange_baseline.rs  zk_overhead.rs
rust-api/lambda-snark/examples/: healthcare_circuit.rs  healthcare_quotient_dump.rs  simple_circuits.rs
rust-api/lambda-snark/examples/healthcare/: shared.rs
rust-api/lambda-snark/src/: arith.rs  challenge.rs  circuit.rs  commitment.rs  context.rs  lean_export.rs  lean_params.rs  lib.rs  ntt.rs  opening.rs  polynomial.rs  r1cs.rs  sparse_matrix.rs
rust-api/lambda-snark/tests/: conformance.rs  edge_cases.rs  integration_coverage.rs  integration_matrix.rs  lwe_verification.rs  ntt_integration.rs  opening_proofs.rs  polynomial_commitment.rs  property_tests.rs  prove_r1cs.rs  prover.rs  prover_pipeline.rs  r1cs.rs  serialization.rs  test_vectors.rs  verifier.rs  verify_r1cs.rs  zk_integration.rs  zk_prover.rs  zk_simulator.rs
scripts/: setup.sh
