[workspace]
members = [
    "lambda-snark-core",
    "lambda-snark-sys",
    "lambda-snark",
    "lambda-snark-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["URPKS Contributors"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/URPKS/lambda-snark-r"
keywords = ["cryptography", "snark", "post-quantum", "lattice", "zero-knowledge"]
categories = ["cryptography", "mathematics", "science"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
rand_core = "0.6"
rand_chacha = "0.3"
sha3 = "0.10"
thiserror = "1.0"

# Serialization
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }

# Testing
proptest = "1.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 0
debug = true
