[workspace]
members = ["lambda-snark-cli"]

[package]
name = "lambda-snark-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ΛSNARK-R command-line interface"

[[bin]]
name = "lambda-snark"
path = "src/main.rs"

[dependencies]
lambda-snark = { path = "../lambda-snark" }
lambda-snark-core = { path = "../lambda-snark-core" }

clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
